--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -31,5 +31,20 @@
 		<!-- 전체를 포함 -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	<filter>
+	      <filter-name>encodingFilter</filter-name>
+	      <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+	      <init-param>
+	           <param-name>encoding</param-name>
+	          <param-value>UTF-8</param-value>
+	      </init-param>
+	 </filter>
+	 <filter-mapping>
+	       <filter-name>encodingFilter</filter-name>
+	       <!-- url 전체에 적용 ("/" 로 써도 무방) -->
+	       <url-pattern>/*</url-pattern>
+	 </filter-mapping>
+	
 
 </web-app>
